# genai-enablement

./: PLATFORM.md  PROJECT_STATUS.md  README.md
.github/workflows/: portfolio-drift.yml
docs/: ai-security-program.md  ai-sre-program.md  autonomous-sre-harness-plan.md  implementation-roadmap.md  platform-glossary.md  role-definition.md  success-metrics.md
portfolio/: projects.json  synchronized-platform.json
research/: 2026-agentic-sre-refresh.md  executive-summary.md  existing-solutions-analysis.md  final-report.md  quick-reference-table.md
scripts/: check_portfolio_drift.py  check_synchronized_platform.py
skills/: REGISTRY.md  skills-lock.json
solutions/: README.md
solutions/ai-incident-agent/: .env.example  README.md  pyproject.toml
solutions/ai-incident-agent/architecture/: system-design.md
solutions/ai-incident-agent/docs/: implementation-status.md
solutions/ai-incident-agent/src/agent/: state.py  workflow.py
solutions/ai-incident-agent/src/agent/nodes/: __init__.py  analyze_incident.py  decision_nodes.py  enrich_notification.py  gather_context.py  match_runbooks.py  send_notifications.py  validate_alert.py
solutions/sre-harness/: .gitignore  README.md  pyproject.toml
solutions/sre-harness/examples/: change-advisory-invocation.json  change-request.json  hitl-approval-receipt.json  hitl-remediation-proposal.json  incident-snapshot.json  permanent-fix-policy-publication.json  permanent-fix-request.json  platform-graph.json  remediation-policy-publication.json  rollback-candidate-policy.json  sentinel-open-findings.json  sentinel-state.json  statefulset.json
solutions/sre-harness/integrations/: README.md  argo-rollouts-deterministic-canary.json  argocd-presync-gate.yaml  gitlab-ci.gate.yml  sentinel-cronjob.yaml
solutions/sre-harness/spec-traceability/: SPEC-B0.json  SPEC-B1.json  SPEC-B2.json  SPEC-B3.json  SPEC-B4.json  SPEC-B5.json  SPEC-B6.json  SPEC-B7-CIR.json  SPEC-B7-CORE.json  SPEC-B7-DRIFT.json  SPEC-B7-NES.json  SPEC-B7-SAT.json  SPEC-B7.json
solutions/sre-harness/src/sre_harness/: __init__.py  advisory_integration.py  change_checks.py  change_gate.py  change_parsers.py  cli.py  hitl.py  permanent_fix.py  platform_graph.py  remediation.py  rollback.py
solutions/sre-harness/src/sre_harness/autonomy_tiers/: __init__.py  action_table.py  classify.py  tiers.py
solutions/sre-harness/src/sre_harness/eval/: __init__.py  __main__.py  case.py  runner.py  scenarios.py  score.py
solutions/sre-harness/src/sre_harness/observability/: __init__.py  attributes.py  tracer.py
solutions/sre-harness/src/sre_harness/sentinel/: __init__.py  __main__.py  cli.py  detectors.py  eval.py  finding.py  scan.py  scenarios.py  serialization.py  source.py  state.py  store.py
solutions/sre-harness/src/sre_harness/triage/: __init__.py  contracts.py  eval.py  pipeline.py  rules.py  source.py
solutions/sre-harness/tests/: test_advisory_integration.py  test_autonomy_tiers.py  test_change_checks.py  test_change_gate.py  test_change_gate_multicheck.py  test_change_parsers.py  test_cli.py  test_eval_case.py  test_eval_runner.py  test_eval_score.py  test_hitl.py  test_observability.py  test_permanent_fix.py  test_platform_graph.py  test_remediation.py  test_rollback.py  test_sentinel_change_regression.py  test_sentinel_cli.py  test_sentinel_detectors.py  test_sentinel_drift.py  test_sentinel_error_rate.py  test_sentinel_eval.py  test_sentinel_finding.py  test_sentinel_observability.py  test_sentinel_scan.py  test_sentinel_serialization.py  test_sentinel_source.py  test_sentinel_state.py  test_sentinel_store.py  test_spec_catalog.py  test_triage_eval.py  test_triage_eval_publication.py  test_triage_pipeline.py  test_triage_source.py
templates/: assessment-checklist.md  engagement-kickoff.md  playbook-template.md  roi-tracker.md
tests/: test_pii_contract_manifest.py  test_pii_contract_schema_and_fixtures.py  test_portfolio_drift.py  test_sp70_continuous_management_manifest.py  test_synchronized_platform.py
(+144 files in other folders)
